Cambio texto footer

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Links</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Inicio</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Quienes Somo</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Nuestro trabajo</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Contactenos</a></li>
               </ul>
             </div>
           </div>
