--- a/index.html
+++ b/index.html
@@ -82,15 +82,13 @@
               <h5 class="white-text">Links</h5>
               <ul>
                 <li><a class="grey-text text-lighten-3" href="#!">Inicio</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Quienes Somo</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Quienes Somos</a></li>
                 <li><a class="grey-text text-lighten-3" href="#!">Nuestro trabajo</a></li>
                 <li><a class="grey-text text-lighten-3" href="#!">Contactenos</a></li>
               </ul>
             </div>
           </div>
         </div>
-
-
 
         <div class="footer-copyright">
           <div class="container">
